# farm-manager

./: Cargo.toml  LICENSE
src/: cli.rs  main.rs  output.rs
src/commands/: hardware.rs  k8s.rs  mod.rs  test.rs  vm.rs
src/hardware/: collect_cpu.rs  collect_gpus.rs  collect_memory.rs  collect_network.rs  collect_node.rs  collect_power.rs  collect_storage.rs  collector.rs  mod.rs  types.rs
src/testing/: dcgm.rs  gpu_errors.rs  hashcat.rs  mod.rs  mpi.rs  nccl.rs
