[package]
name = "farm-manager"
version = "0.1.0"
edition = "2021"
authors = ["Hungry Banana <HungryBanana7@gmail.com>"]
description = "Farm Server Manager"

[dependencies]
sysinfo = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
procfs = "0.16"
chrono = { version = "0.4", features = ["serde"] }
pciid-parser = "0.8"
smbios-lib = "0.9"
clap = { version = "4.4", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
nvml-wrapper = "0.12.0"